<resources>
    <string name="app_name">AdiPortfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="stock_hawk">STOCK HAWK</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="material_app">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiquitous">UBIQUITOUS</string>
    <string name="capstone">CAPSTONE</string>
</resources>
